<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="most_popular">most popular</string>
    <string name="highest_rated">highest rated</string>
    <string name="sort">sort</string>
    <string name="favourite">Favourites</string>
    <string name="added_to_favourite">Added to favourites</string>
    <string name="movie_detail">Movie details</string>
    <string name="movie_rating">Rating:</string>
    <string name="movie_title">Title:</string>
    <string name="movie_synopsis">Synopsis:</string>
    <string name="movie_release">Release Date:</string>
    <string name="error_msg">Problem Connecting, Network may not be available</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="play_video_on_youtube">Play Video on Youtube</string>
</resources>
