<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--<item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom"> -->
    <!-- create a group of selected items in settings -->
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/action_most_popular"
            android:title="@string/most_popular" />
        <item
            android:id="@+id/action_sort_highest_rated"
            android:title="@string/highest_rated" />
        <item
            android:id="@+id/action_favourite"
            android:title="@string/favourite" />
    </group>
</menu>